# proc-macro-hack

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
demo-hack/: Cargo.toml
demo-hack-impl/: Cargo.toml
demo-hack-impl/src/: lib.rs
demo-hack/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
impl/: Cargo.toml
impl/src/: lib.rs
nested/: Cargo.toml  build.rs
nested/src/: lib.rs
repro/: Cargo.toml
src/: args.rs  compiler.rs  error.rs  iter.rs  lib.rs  parse.rs  quote.rs
src/fallback/: mod.rs  parse.rs
tests/ui/: private.stderr  unexpected-arg.stderr  unexpected.stderr  unknown-arg.stderr
