[package]
name = "proc-macro-hack"
version = "0.5.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros in expression position"
repository = "https://github.com/dtolnay/proc-macro-hack"
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.5"

[dev-dependencies]
demo-hack = { version = "0.0.5", path = "demo-hack" }
demo-hack-impl = { version = "0.0.5", path = "demo-hack-impl" }

[badges]
travis-ci = { repository = "dtolnay/proc-macro-hack" }

[workspace]
members = ["demo-hack", "demo-hack-impl", "example", "nested"]
