[package]
name = "proc-macro-hack"
version = "0.4.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Procedural functionlike!() macros using only Macros 1.1"
repository = "https://github.com/dtolnay/proc-macro-hack"

[dependencies]
proc-macro-hack-impl = { version = "=0.4.2", path = "impl" }

[dev-dependencies]
demo-hack = { version = "0.0.4", path = "demo-hack" }
demo-hack-impl = { version = "0.0.4", path = "demo-hack-impl" }

[badges]
travis-ci = { repository = "dtolnay/proc-macro-hack" }
