[package]
name = "demo-hack-impl"
version = "0.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Demo of proc-macro-hack"
repository = "https://github.com/dtolnay/proc-macro-hack"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = { version = "0.5", path = ".." }
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
