[package]
name = "demo-hack-impl"
version = "0.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Demo of proc-macro-hack"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/proc-macro-hack"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = { version = "0.5", path = ".." }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
