[package]
name = "demo-hack"
version = "0.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Demo of proc-macro-hack"
repository = "https://github.com/dtolnay/proc-macro-hack"
edition = "2018"

[dependencies]
proc-macro-hack = { version = "0.5", path = ".." }
demo-hack-impl = { version = "0.0.5", path = "../demo-hack-impl" }
