[package]
name = "proc-macro-nested"
version = "0.1.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Support for nested proc-macro-hack invocations"
repository = "https://github.com/dtolnay/proc-macro-hack"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
